--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -81,6 +81,9 @@
             android:gravity="center_vertical"
             android:padding="10dp"
             android:hint="한줄평 (최대 7자)"
+            android:maxEms="7"
+            android:maxLength="7"
+            android:maxLines="1"
             android:textColor="#000"
             android:textColorHint="#BFBFBF"
             app:layout_constraintBottom_toTopOf="@id/navi_btn_register"
