--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -9,7 +9,8 @@
 
         <variable
             name="item"
-            type="com.skh.reviewme.Community.model.CommunityModel"/>
+            type="com.skh.reviewme.Community.model.CommunityModel"
+            />
 
 
     </data>
@@ -17,72 +18,119 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         >
 
 
         <TextView
-            android:layout_marginTop="15dp"
             android:id="@+id/text_regi_name"
-            android:text="@{item.name}"
-            android:layout_width="150dp"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:textColor="#000"
-            android:layout_height="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:gravity="center_vertical"
+            android:text="@{item.name}"
+            android:textColor="#000"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="홍석기"
             />
 
-        <TextView
-            android:text="@{item.text}"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:id="@+id/txt_regi_title"
-            app:layout_constraintTop_toBottomOf="@id/text_regi_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
-            android:layout_marginStart="20dp"
 
+        <TextView
+            android:id="@+id/text_regi_timestamp"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_vertical"
+            android:text="7시 30분 11:28"
+            android:textColor="@color/darkGrey"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/text_regi_name"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="7시 30분 11:28"
+            />
+
+
+        <ImageView
+            android:id="@+id/img_regi_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/icons8_topic_24"
+            app:layout_constraintEnd_toStartOf="@id/text_regi_comment"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+
+        <TextView
+            android:id="@+id/text_regi_comment"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="15dp"
+            android:text="5"
+            android:textColor="@color/colorAccent"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="5"
+            />
+
+        <TextView
+            android:id="@+id/txt_regi_title"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="15dp"
+            android:gravity="center_vertical"
+            android:text="@{item.text}"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@id/text_regi_name"
             tools:text="여기 구나"
             />
 
         <TextView
             android:id="@+id/txt_regi_content"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/txt_regi_title"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="8dp"
             android:maxLines="2"
-            android:padding="5dp"
-            android:textColor="@color/black"
             android:text="dddddddddddddddddddasdadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddaddddddddddddda"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_regi_title"
             />
 
         <ImageView
             android:id="@+id/img_thumbnail"
+            android:layout_width="80dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/img_regi_comment"
+            android:src="@drawable/test_10"
             android:transitionName="innerImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
             app:CommunityMainImageUrl="@{item.image}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="UnusedAttribute"
             />
-
 
 
     </android.support.constraint.ConstraintLayout>
