--- a/app/src/main/res/layout/activity_community_question.xml
+++ b/app/src/main/res/layout/activity_community_question.xml
@@ -21,26 +21,27 @@
         >
 
         <TextView
+            android:id="@+id/question_text_titlebar"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="등록"
-            android:id="@+id/question_text_titlebar"
-            android:textColor="#000"
+            android:layout_marginTop="25dp"
             android:gravity="top|start"
+            android:text="등록"
+            android:textColor="#000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/question_text_title"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintBottom_toTopOf="@id/question_text_title"
-            android:textSize="18sp"
 
+            app:layout_constraintVertical_chainStyle="spread_inside"
             />
 
         <EditText
             android:id="@+id/question_text_title"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_vertical"
             android:padding="10dp"
             android:hint="제목을 입력해주세요"
@@ -70,7 +71,7 @@
             android:hint="내용"
             android:textColor="#000"
             android:textColorHint="#BFBFBF"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/question_text_title"
@@ -80,17 +81,7 @@
             >
         </EditText>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/survey_divder"
-            app:layout_goneMarginTop="2.5dp"
-            app:layout_constraintTop_toBottomOf="@id/question_txt_question"
-            app:layout_constraintBottom_toTopOf="@id/question_img1"
-            android:layout_marginBottom="2.5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+
 
         <ImageView
             android:id="@+id/question_img1"
@@ -165,7 +156,7 @@
             android:padding="6dp"
             android:layout_marginEnd="30dp"
             android:onClick="@{onClickListener::onClick}"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/icons8_gallery_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/question_add_img"
             app:layout_constraintTop_toBottomOf="@id/question_img1"
