community 서버로 받아오기 업로드 추가 이미지가 깨짐..

--- a/app/src/main/res/layout/fragment_community_inner.xml
+++ b/app/src/main/res/layout/fragment_community_inner.xml
@@ -10,6 +10,12 @@
             name="onClickListener"
             type="android.view.View.OnClickListener"
             />
+
+        <variable
+            name="item"
+            type="com.skh.reviewme.Community.model.CommunityInnerModel"
+            />
+
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -34,12 +40,14 @@
                 <TextView
                     android:id="@+id/inner_txt_regi_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="15dp"
                     android:gravity="center_vertical"
-                    android:textColor="#000"
-                    app:layout_constraintStart_toEndOf="@id/inner_txt_title"
+                    android:text="@{item.nickname}"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@id/inner_txt_nickname"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_chainStyle="spread"
@@ -47,117 +55,166 @@
                     />
 
                 <TextView
-                    android:id="@+id/inner_txt_title"
+                    android:id="@+id/inner_txt_nickname"
                     android:layout_width="0dp"
-                    android:layout_height="20dp"
+                    android:layout_height="30dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
                     android:gravity="center_vertical"
-                    android:textColor="#000"
-
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="@{item.time}"
+                    android:textColor="@color/darkGrey"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@id/inner_img_profile"
                     app:layout_constraintStart_toEndOf="@id/inner_txt_regi_name"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ"
+                    tools:text="7시 30 분 11초"
                     />
 
-
-                <RelativeLayout
-                    android:id="@+id/inner_const_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/btn_grey_border"
+                <ImageView
+                    android:id="@+id/inner_img_profile"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/inner_txt_title"
-                    >
-
-                    <TextView
-                        android:id="@+id/inner_inner_txt_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="#000"
-                        tools:text="ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
-                        />
-
-                    <ImageView
-                        android:id="@+id/inner_inner_img1_content"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/inner_inner_txt_content"
-                        android:layout_marginStart="20dp"
-                        tools:src="@drawable/horizontal_title"
-                        />
-
-                    <ImageView
-                        android:id="@+id/inner_inner_img2_content"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_below="@+id/inner_inner_txt_content"
-                        android:layout_marginEnd="20dp"
-                        tools:src="@drawable/horizontal_title"
-                        />
-
-                    <ImageView
-                        android:id="@+id/inner_inner_img3_content"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_alignStart="@+id/inner_inner_img1_content"
-                        android:layout_below="@+id/inner_inner_img1_content"
-                        android:layout_marginBottom="15dp"
-                        android:layout_marginTop="20dp"
-                        tools:src="@drawable/horizontal_title"
-                        />
-
-                    <ImageView
-                        android:id="@+id/inner_inner_img4_content"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_alignStart="@+id/inner_inner_img2_content"
-                        android:layout_below="@+id/inner_inner_img2_content"
-                        android:layout_marginBottom="15dp"
-                        android:layout_marginTop="20dp"
-                        tools:src="@drawable/horizontal_title"
-                        />
-
-                </RelativeLayout>
-
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/test_10"
+                    />
 
                 <View
+                    android:id="@+id/view_profile_bottom"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#13A9AA"
+                    android:layout_height="0.3dp"
+
+                    android:layout_marginTop="8dp"
+                    android:background="@color/darkGrey"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_profile"
+
+                    />
+
+                <TextView
+                    android:id="@+id/inner_txt_titles"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:text="@{item.title}"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/view_profile_bottom"
+                    tools:text="제목 입니다 제목 입니다 제목 입니다 제목 입니다 제목 입니"
+                    />
+
+                <TextView
+                    android:id="@+id/inner_txt_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="12dp"
+                    android:text="@{item.text}"
+                    android:textColor="@color/black"
+                    android:textSize="13sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_txt_titles"
+                    tools:text="이야아아양야 이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야"
+                    />
+
+                <View
+                    android:id="@+id/view_content_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.3dp"
+
+                    android:layout_marginTop="13dp"
+                    android:background="@color/darkGrey"
+                    app:layout_constraintTop_toBottomOf="@id/inner_txt_content"
+
+                    />
+
+                <ImageView
+                    android:id="@+id/inner_img_first"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    app:innerCommunityImageUrl="@{item.image1}"
+                    app:layout_constraintBottom_toTopOf="@id/inner_img_third"
+                    app:layout_constraintEnd_toStartOf="@id/inner_img_second"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/view_content_bottom"
+                    tools:src="@drawable/test_10"
+                    />
+
+                <ImageView
+                    android:id="@+id/inner_img_second"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="15dp"
+                    app:innerCommunityImageUrl="@{item.image2}"
+                    app:layout_constraintBottom_toTopOf="@id/inner_img_fourth"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/inner_img_first"
+                    app:layout_constraintTop_toBottomOf="@id/view_content_bottom"
+                    tools:src="@drawable/test_10"
+                    />
+
+                <ImageView
+
+                    android:id="@+id/inner_img_third"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    app:innerCommunityImageUrl="@{item.image3}"
+                    app:layout_constraintEnd_toStartOf="@id/inner_img_fourth"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_first"
+                    tools:src="@drawable/test_10"
+                    />
+
+                <ImageView
+                    android:id="@+id/inner_img_fourth"
+                    android:layout_width="0dp"
+                    android:layout_height="160dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="15dp"
+                    app:innerCommunityImageUrl="@{item.image4}"
+                    app:layout_constraintBottom_toTopOf="@id/bottom_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/inner_img_third"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_second"
+                    tools:src="@drawable/test_10"
+                    />
+
+                <View
+                    android:id="@+id/bottom_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.2dp"
+                    android:layout_marginTop="13dp"
+                    android:background="@color/darkGrey"
                     app:layout_constraintBottom_toTopOf="@id/inner_rv_comment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_img_fourth"
                     />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/inner_rv_comment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-
-                    android:paddingEnd="5dp"
-                    android:paddingStart="5dp"
                     android:scrollbars="vertical"
+                    android:background="@color/grey"
+                    app:layout_constraintBottom_toTopOf="@id/inner_edit_comment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/inner_const_view"
-                    app:layout_constraintBottom_toTopOf="@id/inner_edit_comment"
+                    app:layout_constraintTop_toBottomOf="@id/bottom_view"
                     tools:listitem="@layout/item_community_main"
                     />
 
@@ -166,30 +223,32 @@
                     android:id="@+id/inner_edit_comment"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:background="@drawable/btn_grey_rec"
-                    app:layout_constraintEnd_toStartOf="@id/inner_txt_comment"
                     android:paddingEnd="7dp"
                     android:paddingStart="7dp"
-                    android:textColor="#000"
+                    android:textColor="@color/black"
                     android:textSize="15sp"
+                    app:layout_constraintTop_toBottomOf="@id/inner_rv_comment"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/inner_txt_comment"
+                    app:layout_constraintStart_toStartOf="parent"
                     tools:text="아ㅐ겨호댜"
 
                     />
 
                 <TextView
                     android:id="@+id/inner_txt_comment"
-                    android:layout_width="60dp"
+                    android:layout_width="50dp"
                     android:layout_height="45dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/inner_edit_comment"
                     android:background="@drawable/btn_color_rec"
                     android:gravity="center"
                     android:onClick="@{onClickListener::onClick}"
                     android:text="등록"
-                    android:textColor="#fff"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_rv_comment"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/inner_edit_comment"
                     />
 
 
