--- a/app/src/main/res/layout/fragment_community_main.xml
+++ b/app/src/main/res/layout/fragment_community_main.xml
@@ -123,18 +123,33 @@
                 app:layout_constraintTop_toTopOf="parent"
                 />
 
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/main_grid_rv"
+            <View
+                android:id="@+id/view_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="0.2dp"
+                android:background="@color/darkGrey"
                 app:layout_constraintTop_toBottomOf="@id/text_category"
-                tools:listitem="@layout/item_community_main"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 />
 
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe_layout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/view_bottom"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                >
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/main_grid_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_community_main"
+                    />
+            </android.support.v4.widget.SwipeRefreshLayout>
 
         </android.support.constraint.ConstraintLayout>
 
