--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -27,16 +27,28 @@
             android:id="@+id/text_regi_name"
             android:layout_width="0dp"
             android:layout_height="25dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:gravity="center_vertical"
-            android:text="@{item.name}"
+            android:text="@{item.nickname}"
             android:textColor="#000"
             android:textSize="13sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="홍석기"
+            />
+
+
+        <View
+            android:id="@+id/view_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/darkGrey"
+            app:layout_constraintTop_toBottomOf="@id/text_regi_name"
             />
 
 
@@ -47,7 +59,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="15dp"
             android:gravity="center_vertical"
-            android:text="7시 30분 11:28"
+            android:text="@{item.time}"
             android:textColor="@color/darkGrey"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/text_regi_name"
@@ -72,7 +84,7 @@
             android:id="@+id/text_regi_comment"
             android:layout_width="0dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginTop="15dp"
             android:text="5"
             android:textColor="@color/colorAccent"
@@ -87,14 +99,15 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:gravity="center_vertical"
-            android:text="@{item.text}"
+            android:text="@{item.title}"
+            android:layout_marginTop="5dp"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
             app:layout_constraintStart_toStartOf="parent"
 
-            app:layout_constraintTop_toBottomOf="@id/text_regi_name"
+            app:layout_constraintTop_toBottomOf="@id/view_bottom"
             tools:text="여기 구나"
             />
 
@@ -104,16 +117,17 @@
             android:layout_height="50dp"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:maxLines="2"
-            android:text="dddddddddddddddddddasdadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddadddddddddddddaddddddddddddda"
+            android:text="@{item.text}"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_regi_title"
+            tools:text="wrqwrqwrqwtqwetewqtewteqtewtdstdsgasdtewtqtd"
             />
 
         <ImageView
@@ -122,13 +136,13 @@
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintTop_toBottomOf="@id/img_regi_comment"
-            android:src="@drawable/test_10"
+            android:layout_marginEnd="25dp"
+            app:layout_constraintTop_toBottomOf="@id/view_bottom"
+
             android:transitionName="innerImage"
-            app:CommunityMainImageUrl="@{item.image}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:src="@drawable/test_10"
             tools:ignore="UnusedAttribute"
             />
 
