--- a/app/src/main/res/layout/item_community_inner.xml
+++ b/app/src/main/res/layout/item_community_inner.xml
@@ -9,7 +9,8 @@
 
         <variable
             name="item"
-            type="com.skh.reviewme.Community.model.CommunityInnerModel"/>
+            type="com.skh.reviewme.Community.model.CommunityInnerCommentModel"
+            />
 
 
     </data>
@@ -17,43 +18,74 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         >
 
 
         <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/inner_text_regi_name"
-            android:text="@{item.nickname}"
-            android:layout_width="150dp"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:textColor="#000"
-            android:layout_height="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:gravity="center_vertical"
+            android:id="@+id/comment_text_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
             android:layout_marginStart="15dp"
+
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:text="@{item.nickname}"
+            android:textColor="@color/black"
+
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="홍석기"
             />
 
         <TextView
-            android:text="@{item.text}"
-            android:layout_width="290dp"
-            android:layout_height="40dp"
-            android:textColor="@color/colorPrimaryDark"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:id="@+id/comment_text_time"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
-            tools:text="여기 구나"
+            android:textColor="@color/darkGrey"
+            android:textSize="12sp"
+            android:text="@{item.time}"
+            app:layout_constraintStart_toEndOf="@id/comment_text_nickname"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="7시 30 분"
             />
 
+        <ImageView
+            android:id="@+id/comment_img_like"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/icons8_two_hearts_24"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="10dp"
+            />
 
-
+        <TextView
+            android:id="@+id/comment_text_comment"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:text="@{item.comment}"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/img_thumbnail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/comment_text_nickname"
+            android:layout_marginBottom="5dp"
+            tools:text="여기 구나"
+            />
 
 
     </android.support.constraint.ConstraintLayout>
