--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#000</color>
     <color name="grey">#f4f4f4</color>
     <color name="darkGrey">#8D8D8D</color>
+    <color name="midGey">#E5E5E5</color>
     <color name="trans">#8f000000</color>
 </resources>
