--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,8 +32,8 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/gradiation_grey"
+            android:layout_height="1dp"
+            android:background="@color/darkGrey"
             app:layout_constraintTop_toBottomOf="@id/regist_txt_title"
             />
 
@@ -123,7 +123,6 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:orientation="horizontal"
-
             >
 
 
@@ -147,7 +146,35 @@
         </RadioGroup>
 
 
+        <TextView
+            android:id="@+id/regist_txt_profileimage"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/regist_radiogroup_age"
+            app:layout_constraintBottom_toTopOf="@id/regist_img_profileimage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintVertical_chainStyle="packed"
+            android:text="프로필 이미지"
+            />
 
+        <ImageView
+            android:id="@+id/regist_img_profileimage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/regist_txt_profileimage"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/btn_grey_circle_border"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@id/regist_btn_register"
+
+            />
 
         <Button
             android:id="@+id/regist_btn_register"
