--- a/app/src/main/res/layout/fragment_community_inner.xml
+++ b/app/src/main/res/layout/fragment_community_inner.xml
@@ -22,19 +22,23 @@
         android:id="@+id/inner_const_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fff"
+        android:clickable="true"
+        android:focusable="true"
+
         >
+
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#fff"
-                android:clickable="true"
-                android:focusable="true"
                 >
 
 
@@ -103,6 +107,7 @@
                     android:text="@{item.title}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
+                    app:layout_constraintBottom_toTopOf="@id/inner_txt_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/view_profile_bottom"
@@ -119,10 +124,10 @@
                     android:text="@{item.text}"
                     android:textColor="@color/black"
                     android:textSize="13sp"
+                    app:layout_constraintBottom_toTopOf="@id/view_content_bottom"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inner_txt_titles"
-                    app:layout_constraintBottom_toTopOf="@id/view_content_bottom"
                     tools:text="이야아아양야 이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야이야아아양야"
                     />
 
@@ -131,10 +136,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.3dp"
                     android:layout_marginTop="13dp"
-                    app:layout_constraintTop_toBottomOf="@id/inner_txt_content"
                     app:layout_constraintBottom_toTopOf="@id/inner_img_first"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inner_txt_content"
 
                     />
 
@@ -166,6 +171,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/inner_img_first"
                     app:layout_constraintTop_toBottomOf="@id/view_content_bottom"
+                    app:layout_constraintVertical_chainStyle="spread_inside"
                     tools:src="@drawable/test_10"
                     />
 
@@ -176,12 +182,12 @@
                     android:layout_height="160dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
+                    android:scaleType="fitXY"
                     app:innerCommunityImageUrl="@{item.image3}"
                     app:layout_constraintEnd_toStartOf="@id/inner_img_fourth"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inner_img_first"
                     tools:src="@drawable/test_10"
-                    android:scaleType="fitXY"
                     />
 
                 <ImageView
@@ -190,10 +196,10 @@
                     android:layout_height="160dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="15dp"
-                    app:innerCommunityImageUrl="@{item.image4}"
-                    app:layout_constraintBottom_toTopOf="@id/bottom_view"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:scaleType="fitXY"
+                    app:innerCommunityImageUrl="@{item.image4}"
+
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/inner_img_third"
                     app:layout_constraintTop_toBottomOf="@id/inner_img_second"
                     tools:src="@drawable/test_10"
@@ -214,9 +220,9 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/inner_rv_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:scrollbars="vertical"
-
+                    app:layout_constraintBottom_toTopOf="@id/inner_edit_comment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bottom_view"
@@ -233,11 +239,10 @@
                     android:paddingStart="7dp"
                     android:textColor="@color/black"
                     android:textSize="15sp"
-                    app:layout_constraintTop_toBottomOf="@id/inner_rv_comment"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/inner_txt_comment"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:text="아ㅐ겨호댜"
+                    tools:text="댓글인가 봉당"
 
                     />
 
@@ -251,7 +256,6 @@
                     android:text="등록"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/inner_rv_comment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/inner_edit_comment"
                     />
@@ -259,5 +263,8 @@
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
+
+
     </android.support.design.widget.CoordinatorLayout>
+
 </layout>
