--- a/app/src/main/res/layout/item_community_main.xml
+++ b/app/src/main/res/layout/item_community_main.xml
@@ -98,7 +98,7 @@
             android:layout_height="25dp"
             android:layout_marginEnd="25dp"
             android:layout_marginTop="15dp"
-            android:text="5"
+            android:text="@{item.comments}"
             android:textColor="@color/colorAccent"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +152,7 @@
         <ImageView
             android:id="@+id/img_thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="470dp"
             android:scaleType="fitXY"
             android:layout_marginTop="10dp"
             app:CommunityMainImageUrl="@{item.image}"
